--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ fastapi-socketio==0.0.10
 filetype==1.2.0
 frozenlist==1.4.0
 googleapis-common-protos==1.60.0
+greenlet==3.0.0
 grpcio==1.59.0
 h11==0.14.0
 httpcore==0.18.0
@@ -26,6 +27,10 @@ httpx==0.25.0
 idna==3.4
 importlib-metadata==6.8.0
 Jinja2==3.1.2
+jsonpatch==1.33
+jsonpointer==2.4
+langchain==0.0.312
+langsmith==0.0.43
 Lazify==0.4.0
 MarkupSafe==2.1.3
 marshmallow==3.20.1
@@ -33,6 +38,7 @@ multidict==6.0.4
 mypy-extensions==1.0.0
 nest-asyncio==1.5.8
 nodeenv==1.8.0
+numpy==1.26.0
 openai==0.28.1
 opentelemetry-api==1.20.0
 opentelemetry-exporter-otlp==1.20.0
@@ -54,11 +60,14 @@ python-engineio==4.7.1
 python-graphql-client==0.4.3
 python-multipart==0.0.6
 python-socketio==5.9.0
+PyYAML==6.0.1
 requests==2.31.0
 simple-websocket==1.0.0
 sniffio==1.3.0
+SQLAlchemy==2.0.21
 starlette==0.27.0
 syncer==2.0.3
+tenacity==8.2.3
 tomli==2.0.1
 tomlkit==0.12.1
 tqdm==4.66.1
